@startuml

title Car Class Diagram

  namespace Laba4 {
    namespace car {
      abstract class Laba4.car.Car {
          # registerCode : String
          - REGEX : String
          - brand : String
          - wheels : int
          + getBrand()
          + getColor()
          + getEngine()
          + getRegisterCode()
          + getWheels()
          + print()
          + setColor()
          + setEngine()
          + setRegisterCode()
          # Car()
          # Car()
          # printDefault()
      }
    }
  }

  namespace Laba4 {
    namespace car {
      enum ColorsCar {
        Blue
        Green
        Pink
        Red
        White
        Yellow
      }
    }
  }


  Laba4.car.Car o-- Laba4.car.Car.ColorsCar : color
  Laba4.car.Car o-- Laba4.engine.Engine : engine
  Laba4.car.Car +-down- Laba4.car.Car.ColorsCar


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
